# ci-cd-test

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  installation.html  modules.html  mzgpaul_test_pkg.html  objects.inv  pyproject.toml  script.py  search.html  searchindex.js  test_arithmetics.py
.circleci/: config.yml  requirements.txt
.github/workflows/: deploy-sphinx.yml  gh-pages-classical.yml  gh-pages.yml  lint-flake8.yml  lint-ruff.yml  lint.yml  lint_ruff.yml
_sources/: index.rst.txt  installation.rst.txt  modules.rst.txt
docs/source/: conf.py  mzgpaul_test_pkg.rst
src/mzgpaul_test_pkg/: arithmetics.py  io.py
tests/: test_arithmetics.py
