[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mzgpaul-test-pkg"
version = "0.1.0"
dependencies = [
    "numpy>=2.0.2",
]
description = "test"
authors = [
    {name = "mu", email = "mzgpaul@hotmail.com"},
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "pytest>=8.3.4",
]
[tool.pdm]
distribution = true

[tool.ruff]
line-length = 88
exclude = ["build/", "docs/"]

[tool.ruff.lint]
extend-select = ["E501", "E", "F", "UP", "B", "SIM", "I"]

